refactor: ensure dropdown logic is reusable Rename variables and add data-title logic to function handleDropDownClick to enable the logic to be reusable on multiple and separate dropdown buttons on the same page.

--- a/src/style.css
+++ b/src/style.css
@@ -61,6 +61,8 @@ h6 {
 /* General Page Styling */
 nav {
     padding: 1rem;
+    display: flex;
+    gap: 3rem;
 }
 
 /* Dropdown Styling */
@@ -74,7 +76,7 @@ nav {
     cursor: pointer;
 }
 
-.nav-button {
+.dropdown-item {
     cursor: pointer;
     width: 4rem;
 }
